Changes in 1.7

 - ITimer no longer stops when started twice

 - Add hasType to IGUIElement as a dynamic_cast substitute.

 - Add another parameter to IGUISkin::draw3DWindowBackground to allow getting the client area without actually drawing 

 - Add function getClientRect to IGUIWindow for getting the draw-able area

 - Fix bug that menus on IGUIWindows with titlebar got drawn too high (id: 2714400)

 - Renamed OctTree to Octree

 - Allow getting a ConstIterator from a non-const core:list

 - Add swap functions to irrMath and to the core classes.

 - Deprecate map::isEmpty() and replace it with map::empty() to make it similar to other base classes.

 - Allow to set the logging level already in SIrrlichtCreationParameters.

 - Add clearSystemMessages to devices (implemented only for Linux and Win32 so far).
 
 - Fix incorrect cursorpos for resizable windows on Windows Vista (found and patched by buffer)

 - Change the beginScene window parameter from void* to SExposedVideoData&. This will allow to manage contexts for OpenGL at some point.

 - Add bzip2 and LZMA decompression modes for zip loader.

 - Add OBJ_TEXTURE_PATH and B3D_TEXTURE_PATH to SceneParameters to allow setting texture-paths for obj and b3d.

 - Irrlicht keeps now filenames additionally to the internally used names, thereby fixing some problems with uppercase-filenames on Linux.

 - Bugfix: Mousewheel no longer sends EMIE_MOUSE_WHEEL messages twice on Linux.

 - refactoring: E_ATTRIBUTE_TYPE and IAttribute have now own headers

 - CStringWArrayAttribute speedup

 - SceneNodeAnimatorFollowSpline can now loop and pingpong

 - Meshviewer.example got some fast-scale buttons.

 - Support AES-encrypted zip files. Should work with 128, 196, and 256 bit AES. This addition also adds a new PRNG, SHA, and other algorithms to the engine, though no interface is yet added for them. The implementation of the encryption algorithms is provided by Dr Brian Gladman.
